Make config order stable